implement naucoin feature, checking user status

--- a/jukebox.html
+++ b/jukebox.html
@@ -100,9 +100,6 @@
 					</li><!--
 					 --><li class="playlist-nav--item js-playlist-nav" data-tab="tab--naucoin" data-target="js-naucoin">
 						<a href="javascript:;">₦aucoin</a>
-					</li><!--
-					 --><li class="playlist-nav--item js-playlist-nav" data-tab="tab--gamblr" data-target="js-gamblr">
-						<a href="javascript:;">>gamblr</a>
 					</li>
 					<li class="playlist-nav--item playlist-nav--item__right">
 						<div class="input-control">
@@ -143,68 +140,7 @@
 
 		<section id="js-naucoin" class="main-content" style="display:none">
 			<div class="container">
-				<div class="naucoin-section">
-					<h5>₦aucoin\<small>₦1.00 = 1000VND</small></h5>
-
-					<div class="payment-block">
-						<div class="row">
-							<div class="columns four">
-								<label for="">select user</label>
-								<select name="" id="" class="u-full-width">
-									<option value="">mittosiro</option>
-									<option value="">Lầu xanh ở lầu đỏ</option>
-									<option value="">Hồ bơi nhỏ</option>
-									<option value="">Nguyễn Hải Phong</option>
-								</select>
-							</div>
-							<div class="columns three">
-								<label for="">amount of payment (+/-)</label>
-								<div class="input-coin u-full-width">
-									<input type="text" class="u-full-width"/>
-								</div>
-							</div>
-							<div class="columns three">
-								<label for="">&nbsp;</label>
-								<button class="button-naucoin">Submit</button>
-							</div>
-						</div>
-					</div>
-					<ul class="g-author--list g-author--list__naucoin">
-						<li class="g-author--item">mittosiro
-							<span class="g-author--ncoin">5.00</span>
-						</li>
-						<li class="g-author--item _active _admin">Lầu xanh ở lầu đỏ
-							<span class="g-author--ncoin">5.00</span>
-						</li>
-						<li class="g-author--item _active">Hồ bơi nhỏ
-							<span class="g-author--ncoin">12.50</span>
-						</li>
-						<li class="g-author--item">Nguyễn Hải Phong
-							<span class="g-author--ncoin">5.00</span>
-						</li>
-						<li class="g-author--item">xyz
-							<span class="g-author--ncoin">6.50</span>
-						</li>
-						<li class="g-author--item">mittosiro
-							<span class="g-author--ncoin">32.00</span>
-						</li>
-						<li class="g-author--item">Tờ Ú
-							<span class="g-author--ncoin">1.00</span>
-						</li>
-						<li class="g-author--item">ahihi
-							<span class="g-author--ncoin">11.00</span>
-						</li>
-						<li class="g-author--item">xyz
-							<span class="g-author--ncoin">4.00</span>
-						</li>
-						<li class="g-author--item">Haley Wu
-							<span class="g-author--ncoin">51.00</span>
-						</li>
-						<li class="g-author--item">Hai
-							<span class="g-author--ncoin">5.00</span>
-						</li>
-					</ul>
-				</div>
+				{{> naucoin}}
 			</div>
 		</section>
 	</div>
@@ -285,4 +221,47 @@
 		<h6 class="naustorm-elm--title">{{name}}</h6>
 		<small class="naustorm-elm--artist">{{artist}}</small>
 	</div>
+</template>
+
+<template name="naucoin">
+	<div class="naucoin-section">
+		<h5>₦aucoin\<small>₦1.00 = 1000VND</small></h5>
+
+		<div class="payment-block">
+			<form action="#" onsubmit="return false;" class="js-naucoin-submit-btn">
+				<div class="row">
+					<div class="columns four">
+						<label for="">select user</label>
+						<select name="userName" id="naucoin-username" class="u-full-width">
+							{{#each dataContext}}
+								<option value="{{userName}}">{{userName}}</option>
+							{{/each}}
+						</select>
+					</div>
+					<div class="columns three">
+						<label for="">amount of payment (+/-)</label>
+						<div class="input-coin u-full-width">
+							<input type="text" class="u-full-width" name="amount" id="naucoin-amount" />
+						</div>
+					</div>
+					<div class="columns three">
+						<label for="">&nbsp;</label>
+						<button type="submit" class="button-naucoin">Submit</button>
+					</div>
+				</div>
+			</form>
+		</div>
+		<ul class="g-author--list g-author--list__naucoin">
+			{{#each dataContext}}
+				{{> naucoinitem}}
+			{{else}}
+				No user !
+			{{/each}}
+		</ul>
+	</div>
+</template>
+
+<template name="naucoinitem">
+	<li class="g-author--item">{{userName}}<span class="g-author--ncoin">{{getBalance}}</span>
+	</li>
 </template>
