Fully implement youtube url parser

--- a/jukebox.html
+++ b/jukebox.html
@@ -196,7 +196,7 @@
 			{{/if}}
 		</a>
 		<a href="javascript:;" class="playlist--item--link js-song-item"
-			title="{{name}} - {{artist}}">{{name}} - {{artist}}</a>
+			title="{{name}} - {{artist}}">{{{name}}} - {{{artist}}}</a>
 		<div class="playlist--item--tools">
 			<small>{{addDate}}</small>
 			<a href="javascript:;" class="lyric-modal-toggle">lyric</a>
