Fix linter errors, clean up code; Update input placeholder with new options

--- a/jukebox.html
+++ b/jukebox.html
@@ -56,7 +56,7 @@
 							<div class="search-box--input-wrapper">
 								<input type="text" id="songurl" name="songurl"
 									class="search-box--input u-full-width js-search-box"
-									placeholder="Input name of song or url from nhaccuatui, mp3"
+									placeholder="Search old song or add new NCT, Zing, YouTube, SoundClound URL"
 									autocomplete="off" />
 							</div>
 							<button type="submit" class="search-box--submit js-search-box--submit"></button>
