only display naustorm statictis for HOST

--- a/jukebox.html
+++ b/jukebox.html
@@ -221,7 +221,7 @@
 			{{/each}}
 		</div>
 
-		<div class="group-author">
+		<div class="group-author {{getDisplayStatus}}">
 			<h5>nauzoo\<small> got {{total}} storms this week.</small></h5>
 			<ul class="g-author--list">
 				{{#each groupByAuthorData}}
