--- a/jukebox.html
+++ b/jukebox.html
@@ -1,6 +1,7 @@
 <head>
 	<title>Nâu Jukebox</title>
 	<link rel="icon" href="/favicon.png" type="image/png">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 	<script src="//cdnjs.cloudflare.com/ajax/libs/trianglify/0.1.5/trianglify.min.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/4.13.1/lodash.min.js">
@@ -188,6 +189,7 @@
 <template name="song">
 	<li class="playlist--item {{selected}} {{playing}}">
 		<span class="playlist--item--active">&rtri;</span>
+		<span class="playlist--item--author">{{#if isUp}} {{{author}}} {{/if}}</span>
 		<a href="{{originalURL}}" class="playlist--item--origin playlist--item--{{originBadgeColor}}" target="_blank">
 			{{#if thumbURL}}
 				<img src="{{thumbURL}}">
@@ -199,11 +201,12 @@
 			title="{{name}} - {{artist}}">{{{name}}} - {{{artist}}}</a>
 		<div class="playlist--item--tools">
 			<small>{{addDate}}</small>
-			<a href="javascript:;" class="lyric-modal-toggle">lyric</a>
+			<a href="javascript:;" class="js-show-book-user {{getDisplayStatus}}"><i class="fa fa-eye"></i></a>
+			<a href="javascript:;" class="lyric-modal-toggle"><i class="fa fa-file-text"></i></a>
 			<a href="javascript:;" class="loading-block rebook-btn">
-				<span class="loading-block--stable">rebook</span>
+				<span class="loading-block--stable"><i class="fa fa-retweet"></i></span>
 			</a>
-			<a href="javascript:;" class="remove-btn">rmv</a>
+			<a href="javascript:;" class="remove-btn"><i class="fa fa-times"></i></a>
 		</div>
 	</li>
 </template>
