Add accounts-ui for quick prototyping, configure login with Facebook and Google

--- a/jukebox.html
+++ b/jukebox.html
@@ -106,6 +106,7 @@
 					</li>
 					<li class="playlist-nav--item playlist-nav--item__right">
 						<div class="input-control">
+							{{> loginButtons}}
 							<input type="text" placeholder="@ enter your name" class="js-nickname-holder"
 								value="{{getNickname}}" />
 							<div class="input-control--error">
