Change Nau jukebox logo

--- a/jukebox.html
+++ b/jukebox.html
@@ -48,7 +48,8 @@
 		<div class="container">
 			<ul class="navbar--list">
 				<li class="navbar--item navbar--item__icon">
-					<a href="https://naustud.io" target="_blank">Nâu Jukebox</a>
+					<a href="https://naustud.io" target="_blank"><img src="/nau-icon.svg" alt="Nau Logo"></a>
+					<span>JUKEBOX</span>
 				</li>
 				<li class="navbar--item navbar--item__input">
 
