Expand search limits; add origin to search result; tweak search result separator

--- a/jukebox.html
+++ b/jukebox.html
@@ -68,7 +68,7 @@
 							<ul class="song-result--list">
 								{{#each searchResult}}
 									<li class="song-result--item js-song-result--item {{_active}}"
-										data-href="{{originalURL}}">{{name}} - {{artist}}</li>
+										data-href="{{originalURL}}">{{{name}}} • {{artist}} • {{origin}}</li>
 								{{/each}}
 							</ul>
 						</div>
