Update jukebox logo will full SVG image, use mix-blend-mode at the logo for better readability

--- a/jukebox.html
+++ b/jukebox.html
@@ -48,8 +48,7 @@
 		<div class="container">
 			<ul class="navbar--list">
 				<li class="navbar--item navbar--item__icon">
-					<a href="https://naustud.io" target="_blank"><img src="/nau-icon.svg" alt="Nau Logo"></a>
-					<span>JUKEBOX</span>
+					<a href="https://naustud.io" target="_blank"><img src="/nau-jukebox.svg" alt="Nau Jukebox logo"></a>
 				</li>
 				<li class="navbar--item navbar--item__input">
 
