Change title and artist separator for better readability

--- a/jukebox.html
+++ b/jukebox.html
@@ -197,7 +197,7 @@
 			{{/if}}
 		</a>
 		<a href="javascript:;" class="playlist--item--link js-song-item"
-			title="{{name}} - {{artist}}">{{{name}}} - {{{artist}}}</a>
+			title="{{name}} - {{artist}}">{{{name}}}&nbsp; • &nbsp;{{{artist}}}</a>
 		<div class="playlist--item--tools">
 			<small>{{addDate}}</small>
 			<a href="javascript:;" class="js-show-book-user {{getDisplayStatus}}"><i class="fa fa-eye"></i></a>
