Upgrade MediaElementPlayer to 4.2.5 which fix many issues with auto playing of next songs and switch between youtube and normal audio players

--- a/jukebox.html
+++ b/jukebox.html
@@ -166,10 +166,7 @@
 <template name="player">
 	<div class="player-panel">
 		<audio id="audio-player" src="song.mp3" preload="none" width="300"></audio>
-
-		<video id="youtube-player" preload="none" width="300" height="200">
-			<source type="video/youtube" src="" />
-		</video>
+		<video id="youtube-player" preload="none" width="300" height="200" src=""></video>
 	</div>
 </template>
 <!-- /player -->
