Fix a case when old bookings remain when the play list is left to run over night

--- a/jukebox.html
+++ b/jukebox.html
@@ -183,7 +183,7 @@
 <!-- /songlist -->
 
 <template name="song">
-	<li class="playlist--item {{selected}} {{playing}}">
+	<li class="playlist--item {{selected}} {{playing}} {{visible}}">
 		<span class="playlist--item--active">&rtri;</span>
 		<span class="playlist--item--author">{{#if isUp}} {{{authorInfo.profile.name}}} {{/if}}</span>
 		<a href="{{originalURL}}" class="playlist--item--origin playlist--item--{{originBadgeColor}}" target="_blank">
