Add auto polyfill CDN; add license and repo in package.json; add open graph meta

--- a/jukebox.html
+++ b/jukebox.html
@@ -2,11 +2,18 @@
 	<title>Nâu Jukebox</title>
 	<link rel="icon" href="/favicon.png" type="image/png">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+
+	<script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/trianglify/0.1.5/trianglify.min.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
-	<script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/4.13.1/lodash.min.js">
-	</script>
+	<script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/4.13.1/lodash.min.js"></script>
 	<script src="https://connect.soundcloud.com/sdk/sdk-3.1.2.js"></script>
+	<meta property="og:url"         content="http://jukebox.naustud.io" />"
+	<meta property="og:type"        content="website" />"
+	<meta property="og:title"       content="Nâu Jukebox" />"
+	<meta name="description" content="This is a fun webapp to allow our team to collectively suggest and play a list of songs. The songs URL is currently parsable from nhaccuatui.com, mp3.zing.com, soundcloud.com, and youtube.com">
+	<meta property="og:description" content="This is a fun webapp to allow our team to collectively suggest and play a list of songs. The songs URL is currently parsable from nhaccuatui.com, mp3.zing.com, soundcloud.com, and youtube.com" />"
+	<meta property="og:image"       content="http://jukebox.naustud.io/nau-jukebox.png" />"
 
 	<style>
 		::-webkit-input-placeholder {
