--- a/jukebox.html
+++ b/jukebox.html
@@ -8,12 +8,12 @@
 	<script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/4.13.1/lodash.min.js"></script>
 	<script src="https://connect.soundcloud.com/sdk/sdk-3.1.2.js"></script>
-	<meta property="og:url"         content="http://jukebox.naustud.io" />
+	<meta property="og:url"         content="https://jukebox.naustud.io" />
 	<meta property="og:type"        content="website" />
 	<meta property="og:title"       content="Nâu Jukebox" />
 	<meta name="description" content="This is a fun webapp to allow our team to collectively suggest and play a list of songs. The songs URL is currently parsable from nhaccuatui.com, mp3.zing.com, soundcloud.com, and youtube.com">
 	<meta property="og:description" content="This is a fun webapp to allow our team to collectively suggest and play a list of songs. The songs URL is currently parsable from nhaccuatui.com, mp3.zing.com, soundcloud.com, and youtube.com" />
-	<meta property="og:image"       content="http://jukebox.naustud.io/nau-jukebox.png" />
+	<meta property="og:image"       content="https://jukebox.naustud.io/nau-jukebox.png" />
 
 	<style>
 		::-webkit-input-placeholder {
@@ -197,7 +197,7 @@
 			{{#if thumbURL}}
 				<img src="{{thumbURL}}">
 			{{else}}
-				<img src="http://stc.id.nixcdn.com/v11/images/df-singer-300x300.jpg">
+				<img src="/default-singer-300x300.jpg">
 			{{/if}}
 		</a>
 		<a href="#" class="playlist__item__link js-song-item"
