--- a/jukebox.html
+++ b/jukebox.html
@@ -44,256 +44,5 @@
 </head>
 
 <body>
-	<a href="https://github.com/naustudio/nau-jukebox" target="_blank" class="github-corner" title="Fork me on Github">
-		<svg width="70" height="70" viewBox="0 0 250 250" style="fill:#151513; color:#fff;"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg>
-	</a>
-
-	<nav class="navbar" id="js-navbar">
-		<div class="loader {{#if isHost}}_active{{/if}}">
-			<div class="dot js-dot"></div>
-		</div>
-		<div class="container">
-			<ul class="navbar__list">
-				<li class="navbar__item navbar__item--icon">
-					<a href="https://naustud.io" target="_blank"><img src="/nau-jukebox.svg" alt="Nau Jukebox logo"></a>
-				</li>
-				<li class="navbar__item navbar__item--input">
-
-					<form action="#" onsubmit="return false;" class="search-box js-add-song-form" id="js-add-song-form">
-						<div class="search-box__control">
-							<div class="search-box__input-wrapper">
-								<input type="text" id="songurl" name="songurl"
-									class="search-box__input u-full-width js-search-box"
-									placeholder="Search old song or add new NCT, Zing, YouTube, SoundClound URL"
-									autocomplete="off" />
-							</div>
-							<button type="submit" class="search-box__submit js-search-box__submit"></button>
-						</div>
-
-						<div class="search-box__result-wrapper">
-							<ul class="song-result__list">
-								{{#each searchResult}}
-									<li class="song-result__item js-song-result__item {{_active}}"
-										data-href="{{originalURL}}">{{{name}}} • {{artist}} • {{origin}}</li>
-								{{/each}}
-							</ul>
-						</div>
-					</form>
-				</li>
-				<li class="navbar__item navbar__item--tool">
-					<div class="js-play-button play-button _play">
-						<div class="play-button__element play-button__elm-top"></div>
-						<div class="play-button__element play-button__elm-right"></div>
-						<div class="play-button__element play-button__elm-bottom"></div>
-						<div class="play-button__element play-button__elm-left"></div>
-					</div>
-				</li>
-			</ul>
-		</div>
-	</nav>
-
-	<div class="scroll-content">
-		<nav class="playlist-nav js-playlist-section">
-			<div class="container">
-				<ul class="playlist-nav__list">
-					<li class="playlist-nav__item _active js-playlist-nav" data-tab="tab--play-list" data-target="js-playblock">
-						<a href="#play-list">Play List</a>
-					</li><!--
-					 --><li class="playlist-nav__item js-playlist-nav" data-tab="tab--yesterday" data-target="js-playblock">
-						<a href="#yesterday">Yesterday</a>
-					</li><!--
-					 --><li class="playlist-nav__item js-playlist-nav" data-tab="tab--past-7-days" data-target="js-playblock">
-						<a href="#last-7-days">Last 7 Days</a>
-					</li><!--
-					 --><li class="playlist-nav__item js-playlist-nav" data-tab="tab--naustorm" data-target="js-naustorm">
-						<a href="#top-lists">Top Lists</a>
-					</li><!--
-					 --><li class="playlist-nav__item js-playlist-nav" data-tab="tab--naucoin" data-target="js-naucoin">
-						<a href="#users">Users</a>
-					</li>
-					<li class="playlist-nav__item playlist-nav__item--right">
-						<div class="js-login-control input-control">
-							{{> loginButtons}}
-							<div class="input-control__error">
-								<p>Please login to book songs!</p>
-							</div>
-						</div>
-					</li>
-				</ul>
-			</div>
-		</nav>
-
-		<section id="js-playblock" class="main-content">
-			<div class="container">
-				<div class="playlist">
-					{{> songlist}}
-				</div>
-				{{> player}}
-			</div>
-		</section>
-
-		<section id="js-naustorm" class="main-content"  style="display:none">
-			<div class="container">
-				{{> naustorm}}
-			</div>
-		</section>
-
-		<section id="js-gamblr" class="main-content"  style="display:none">
-			<div class="container">
-				<div class="naustorm-section">
-					<h5>>gamblr</h5>
-					<p>You want to change, make changes. Help us to make it real, plz !!!</p>
-				</div>
-			</div>
-		</section>
-
-		<section id="js-naucoin" class="main-content" style="display:none">
-			<div class="container">
-				{{> naucoin}}
-			</div>
-		</section>
-	</div>
-
-	<div class="lyric-modal js-lyric-modal">
-		<div class="lyric-modal-inner">
-			<span class="lyric-modal-close js-lyric-modal-close">X</span>
-			<h4 class="lyric-modal-header">Lyric</h4>
-			<div class="lyric-modal-content">
-				<strong class="js-lyric-modal-song-title">
-					Song title
-				</strong><br>
-				<p class="js-lyric-modal-song-lyric">
-					Song lyrics...
-				</p>
-			</div>
-		</div>
-	</div>
+	<div id="root"></div>
 </body>
-
-<template name="player">
-	<div class="player-panel">
-		<audio id="audio-player" src="song.mp3" preload="none" width="300"></audio>
-		<video id="youtube-player" preload="none" width="300" height="200" src=""></video>
-	</div>
-</template>
-<!-- /player -->
-
-<template name="songlist">
-	<ul class="playlist__list">
-		{{#each songs}}
-			{{> song}}
-		{{else}}
-			Fetching for songs...
-		{{/each}}
-	</ul>
-</template>
-<!-- /songlist -->
-
-<template name="song">
-	<li class="playlist__item {{selected}} {{playing}} {{visible}}">
-		<span class="playlist__item__active">&rtri;</span>
-		<span class="playlist__item__author">{{#if isUp}} {{{authorInfo.profile.name}}} {{/if}}</span>
-		<a href="{{originalURL}}" class="playlist__item__origin playlist__item__{{originBadgeColor}}" target="_blank">
-			{{#if thumbURL}}
-				<img src="{{thumbURL}}">
-			{{else}}
-				<img src="/default-singer-300x300.jpg">
-			{{/if}}
-		</a>
-		<a href="#" class="playlist__item__link js-song-item"
-			title="{{name}} - {{artist}}">{{{name}}}&nbsp; • &nbsp;{{{artist}}}</a>
-		<div class="playlist__item__tools">
-			<small>{{addDate}}</small>
-			<a href="#" class="js-show-book-user {{getDisplayStatus}}"><i class="fa fa-eye"></i></a>
-			<a href="#" class="lyric-modal-toggle"><i class="fa fa-file-text"></i></a>
-			<a href="#" class="loading-block rebook-btn">
-				<span class="loading-block__stable"><i class="fa fa-retweet"></i></span>
-			</a>
-			<a href="#" class="remove-btn {{getDisplayStatus}}"><i class="fa fa-times"></i></a>
-		</div>
-	</li>
-</template>
-<!-- /song -->
-
-<template name="naustorm">
-	<div class="naustorm-section">
-		<h5>Top Songs <small>{{dateString}}</small></h5>
-
-		<div class="row naustorm">
-			{{#each storms}}
-				{{> naustormitem}}
-			{{else}}
-				Fetching top songs...
-			{{/each}}
-		</div>
-
-		<div class="group-author {{getDisplayStatus}}">
-			<h5>Top Users <small>got {{total}} bookings this week.</small></h5>
-			<ul class="g-author__list">
-				{{#each groupByAuthorData}}
-					{{> naustormauthoritem}}
-				{{else}}
-					<li class="g-author__item">Waiting for data...</li>
-				{{/each}}
-			</ul>
-		</div>
-	</div>
-</template>
-
-<template name="naustormitem">
-	<div class="columns three naustorm-elm">
-		<div class="naustorm-elm__wrapper">
-			<img class="naustorm-elm__cover" src="{{thumbURL}}" alt="{{name}} - {{artist}}" />
-			<div class="naustorm-elm__listens">{{listens}} <small style="font-weight:100">listings</small></div>
-		</div>
-		<h6 class="naustorm-elm__title">{{{name}}}</h6>
-		<small class="naustorm-elm__artist">{{artist}}</small>
-	</div>
-</template>
-
-<template name="naustormauthoritem">
-	<li class="g-author__item {{getStatus}}">{{profile.name}} <span class="g-author__storm">{{books}} bookings</span></li>
-</template>
-
-<template name="naucoin">
-	<div class="naucoin-section">
-		<h5>Users<small>₦: Naucoin, ₦1.00 = 1000VND</small></h5>
-
-		<div class="payment-block {{getDisplayStatus}}">
-			<form action="#" onsubmit="return false;" class="js-naucoin-submit-btn">
-				<div class="row">
-					<div class="columns four">
-						<label for="">select user</label>
-						<select name="userName" id="naucoin-username" class="u-full-width">
-							{{#each dataContext}}
-								<option value="{{_id}}">{{profile.name}}</option>
-							{{/each}}
-						</select>
-					</div>
-					<div class="columns three">
-						<label for="">amount of payment (+/-)</label>
-						<div class="input-coin u-full-width">
-							<input type="text" class="u-full-width" name="amount" id="naucoin-amount" />
-						</div>
-					</div>
-					<div class="columns three">
-						<label for="">&nbsp;</label>
-						<button type="submit" class="button-naucoin">Submit</button>
-					</div>
-				</div>
-			</form>
-		</div>
-		<ul class="g-author__list g-author__list--naucoin">
-			{{#each dataContext}}
-				{{> naucoinitem}}
-			{{else}}
-				No user !
-			{{/each}}
-		</ul>
-	</div>
-</template>
-
-<template name="naucoinitem">
-	<li class="g-author__item {{getStatus}}"><img class="g-author__image" src="{{profileImage}}" alt="profile.name"> {{profile.name}}{{#if isLegacyAccount }} - OLD{{/if}}<span class="g-author__ncoin">{{getBalance}}</span>
-	</li>
-</template>
