Mobile layout of navbar

--- a/jukebox.html
+++ b/jukebox.html
@@ -1,4 +1,6 @@
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
 	<title>Nâu Jukebox</title>
 	<link rel="icon" href="/favicon.png" type="image/png">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
